--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "json-server": "^0.14.2",
     "jsonwebtoken": "^8.1.0",
     "nodemon": "^2.0.20"
+  },
+  "engines": {
+    "node": "16.15.1"
   }
 }
